# RunAlexDB

./: BENCHMARK.md  CHANGELOG.md  COMMERCIAL_LICENSE.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
docs/: security-audit.md
src/: auth.rs  config.rs  engine.rs  login.html  main.rs  protocol.rs  server.rs  simd_scan.rs  webui.html  webui.rs
src/firewall/: backend.rs  mod.rs
